--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgre
+spring.profiles.active=springdatajpa
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.profiles.active=springdatajpa
+spring.datasource.url=jdbc:mysql://localhost:3306/zaioro
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
